src/objects/BMCServiceDesk__Unavailability_Action_History__c.object
<CustomObject>
    <description>This object allows you to store data that tracks the history of all actions that have been performed on Service Outage.</description>
    <fields>
        <fullName>BMCServiceDesk__FKAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to Service Outage. User-defined actions are used to record details of the steps taken to resolve an issue during the life cycle of an Service Outage.</inlineHelpText>
        <label>Action</label>
        <referenceTo>BMCServiceDesk__Action__c</referenceTo>
        <relationshipLabel>Service Outage Action History</relationshipLabel>
        <relationshipName>Unavailability_Action_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff.</inlineHelpText>
        <label>Staff ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Unavailability_Action_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NotificationComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Projected_Service_Outage__c</fullName>
        <label>Service Outage</label>
        <referenceTo>BMCServiceDesk__Projected_Service_Outage__c</referenceTo>
        <relationshipLabel>Service Outage Action History</relationshipLabel>
        <relationshipName>Unavailability_Action_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__date__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the history record is created. If required, you can use this field to select a different date and time from the automatically filled in date and time for user-defined actions.</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__description__c</fullName>
        <inlineHelpText>This field is automatically set to the description of the user-defined action selected in the Action ID field. This description explains what the selected Action ID represents.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the Service Outage record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__note__c</fullName>
        <inlineHelpText>Use this field to provide details about what has been accomplished when you performed this action. The date and time is recorded for each new entry or update that you make in this field.</inlineHelpText>
        <label>Note</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__system__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Outage Action History</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Outage Action History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Outage Action History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>